--- a/test-server/HSE.Grafana.Streaming.TestApp/HSEStreamingExampleApp/GrafanaStreamingTest.razor
+++ b/test-server/HSE.Grafana.Streaming.TestApp/HSEStreamingExampleApp/GrafanaStreamingTest.razor
@@ -1,20 +1,21 @@
-﻿<ContentView>
+﻿<StyleSheet Resource="Assets/style.css" Assembly="GetType().Assembly"></StyleSheet>
+<ContentView>
 	<StackLayout Margin="new Thickness(20)">
-		<Frame CornerRadius="10" BackgroundColor="Color.LightBlue">
+		<Frame CornerRadius="10" class="content">
 			<StackLayout>
 				<Button Text="@(isSending ? "Pause" : "Start")" OnClick="ToggleSending" />
-				<StackLayout Orientation="StackOrientation.Horizontal" HorizontalOptions="LayoutOptions.Center">
+				<StackLayout class="data" Orientation="StackOrientation.Horizontal" HorizontalOptions="LayoutOptions.Center">
 					<Label Text="@Math.Round(GrafanaStreaming.OrientationData.X,2).ToString("0.00")"></Label>
 					<Label Text="@Math.Round(GrafanaStreaming.OrientationData.Y,2).ToString("0.00")"></Label>
 					<Label Text="@Math.Round(GrafanaStreaming.OrientationData.Z,2).ToString("0.00")"></Label>
 				</StackLayout>
-				<Label Text="TCP Listen Adresses:"></Label>
+				<Label Text="TCP Listen Adresses:" TextColor="Color.White"></Label>
 				@foreach (var ip in IPAddresses)
 				{
-					<Label Text="@($"ws://{ip}:{Port}")" />
+					<Label Text="@($"ws://{ip}:{Port}")" TextColor="Color.White" FontAttributes="FontAttributes.Bold" />
 				}
 				<Label Text="@($"Active Connections: {GrafanaStreaming.OpenConnections}")"
-					   TextColor="@(GrafanaStreaming.OpenConnections > 0 ? Color.Green : Color.DarkGray)"></Label>
+					   TextColor="@(GrafanaStreaming.OpenConnections > 0 ? Color.FromHex("#00ff00"): Color.DarkGray)"></Label>
 			</StackLayout>
 		</Frame>
 	</StackLayout>
